front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
@import '../../../shared/scss/global';

.transactions__table-container {

  .transactions__page-item-range {
    padding: .5em .1em 0 0 ;
  }

  .transactions__table {
    width: 100%;
  }

  .transactions__table-checkbox {
    width: 3%;
  }

  .transactions__table-pagination-container {
    padding: 1em;
  }  

  /** hide the dropdown caret **/
  .dropdown-toggle:after {
    border: none;
  }  

  #transactions__dropdown-action > button > i {
    padding-right: 3px;
  }

  .bulk_action {
    text-align: left;
  }

  .transactions__bulk_action_btn[disabled] {
    background:#6c757d;
    border-color: #6c757d;
  }

  .dropdown-menu {
    min-width: 6em;
  }  

  .transactions__item-range {
    font-size: 13px;
    color: grey;
    margin: 0 5px;
  }

  .transactions__total-amount > i {
    color: #112E51;
    padding-left: 3px;
  }

  .transactions__total-amount-container {
    margin: 1.5em 0;
  }


  /* style ngx-pagination - start */
  /* override some styling where use of !important is made. */

  .ngx-pagination .current{
    padding: 0.1875rem 0.625rem;
    background: #9B9B9B !important;;
    color: #fefefe;
    cursor: default;
  }

  .ngx-pagination a, .ngx-pagination button {
    color: #9B9B9B !important;;
    display: block;
    padding: 0.1875rem 0.625rem;
    border-radius: 0;
  }	

  /* style ngx-pagination - end */


  .column-options-modal {

    #transactions__pin-modal-header {
      background-color: $crusta;
    }

    .btn-modal-footer {
      width: 6em;
    }

    .row{
      height: 3em;
    }

    input[type="checkbox" i]:disabled, .disabled-column-option{
      color: #cccccc;
    } 

    input[type=checkbox] {
      transform: scale(1.5);
    }
  }
}

